--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
     </section>
 </section>
 <section class="section_3">
+    <div class="group_3_0">
     <img class="panal_2" src="./assets/img/panal 2.png" alt="Panal 2">
     <div class="group_3">
     <div class="group_3_1">
     <h3 class="sub_dire">Dirección</h3>
     <h5 class="direccion">Teniente Farias 1895</h5>
+</div>
 </div>
     <img class="abejas" src="./assets/img/abejas.png" alt="abejas">
 </div>
