update_index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="img_winnie" src="./assets/img/winnie1.png" alt="Imagen de winnie pooh">
         <h1 class="titulo">Baby Shower</h1>
     </div>
-        <h3 class="sub_inv">Tenemos el  honor de invitarte a celebrar la llegada de nuestra bebe</h3>
+        <h3 class="sub_inv">Tenemos el  honor de invitarte a celebrar la llegada de nuestra bebé</h3>
     </section>
     <section class="section_2">
     <section class="section_2_1">
@@ -34,7 +34,7 @@
     </div>
     </section>
     <section class="section_2_2">
-        <h3 class="question">¿Cuanto falta?</h3>
+        <h3 class="question">¿Cuánto falta?</h3>
         <div class="gran_dia">
             <h5 class="cont"><span class="dias" id="dias">19</span><span class="count">DIAS</span></h5>
             <h5 class="cont"><span class="horas" id="horas">14</span><span class="count">HORAS</span></h5>
@@ -63,8 +63,8 @@
     <h3 class="sub_sug">Sugerencia</h3>
     <div class="group_4">
     <img class="friend_winnie" src="./assets/img/amigos winnie.png" alt="amigos winnie">
-    <p class="parrafo">Cualquier regalo será bienvenido y apreciado,pero si quieres una sugerencia.
-    Lo que vamos a utilizar mucho son pañales (no Recien Nacido), toallita, productos de higiene para la bebe independientemente del tamaño (cantidad) y/o marca.</p>
+    <p class="parrafo">Cualquier regalo será bienvenido y apreciado, pero si queres una sugerencia.
+    Lo que vamos a utilizar mucho son pañales (no Recien Nacido), toallitas, productos de higiene para la bebé independientemente del tamaño (cantidad) y/o marca.</p>
 </div>
     <p class="p_ty">¡Gracias!</p>
 </section>
